--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "folder-hash": "^4.0.1"
+    "folder-hash": "^4.0.1",
+    "express": "~4.16"
   },
   "devDependencies": {
     "jest": "^27.0.6"
