--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "folder-hash": "^4.0.1",
-    "express": "~4.16"
+    "express": "~4.16",
+    "localtunnel": "^2.0"
   },
   "devDependencies": {
     "jest": "^27.0.6"
